--- a/index.html
+++ b/index.html
@@ -2,39 +2,48 @@
 <html>
 <head>
 	<link rel="stylesheet" href="style.css">
-	<script src="scripts.js"></script>
-	<title>Mulliri 01</title>
+	<title>Coffee Order Menu</title>
 </head>
 <body>
-<h1>Mulliri 01</h1>
-<div class="container">
-	<div class="row">
-		<a href="kafet.html">
-			<div id="div1" class="box" onclick="divClicked()">kafet</div>
-		</a>
-		<a href="kafet.html">
-			<div id="div2" class="box" onclick="divClicked()">L2</div>
-		</a>
-		<a href="kafet.html">
-			<div id="div3" class="box" onclick="divClicked()">L3</div>
-		</a>
-	</div>
-	<div class="row">
-		<a href="kafet.html">
-			<div id="div4" class="box" onclick="divClicked()">L4</div>
-		</a>
-		<a href="kafet.html">
-			<div id="div5" class="box" onclick="divClicked()">L5</div>
-		</a>
-		<a href="kafet.html">
-			<div id="div6" class="box" onclick="divClicked()">L6</div>
-		</a>
-	</div>
-</div>
+	<header>
+		<h1>Coffee Order Menu</h1>
+	</header>
 
+	<div class="banner">
+		<img src="https://th.bing.com/th/id/R.2cd006f7c5aab2ca43809e21684a5ddb?rik=04eYC7MRd%2b%2fd8g&pid=ImgRaw&r=0" alt="Coffee Banner">
+	</div>
 
-<div class="checkout-image">
-	<h1>Checkout</h1>
-</div>
+	<div class="menu">
+		<div class="menu-item">
+			<div class="menu-image">
+				<img src="https://thumbs.dreamstime.com/b/cup-espresso-small-hot-drink-vector-illustration-225183920.jpg" alt="Espresso">
+			</div>
+			<div class="menu-details">
+				<h3>Espresso</h3>
+				<p>A concentrated shot of coffee served in a small cup.</p>
+				<p>Price: $2.50</p>
+				<button class="add-to-cart-btn" data-name="Espresso" data-price="2.50">Add to Cart</button>
+			</div>
+		</div>
+
+		<!-- Additional menu items can be added here -->
+
+	</div>
+
+	<div class="cart">
+		<h2>Your Cart</h2>
+		<ul class="cart-items">
+			<!-- Cart items will be dynamically added here -->
+		</ul>
+		<p class="total-price">Total: $0.00</p>
+		<button class="clear-cart-btn">Clear Cart</button>
+		<button class="place-order-btn">Place Order</button>
+	</div>
+
+	<footer>
+		<p>&copy; 2023 Coffee Order Menu. All rights reserved.</p>
+	</footer>
+
+	<script src="script.js"></script>
 </body>
 </html>
