--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	</header>
 
 	<div class="banner">
-		<img src="https://th.bing.com/th/id/R.2cd006f7c5aab2ca43809e21684a5ddb?rik=04eYC7MRd%2b%2fd8g&pid=ImgRaw&r=0" alt="Coffee Banner">
+		<img src=https://th.bing.com/th/id/R.56278e9f0c4f1fa1150649c32ba9a4e2?rik=BFxK69q6ZA80MQ&riu=http%3a%2f%2fmullirivjeter.al%2fwp-content%2fuploads%2f2017%2f11%2fLogo-Mulliri-Large.png&ehk=q3VWYYbgmsIVKGt293dpmfxXsaEdVOQNcV2hwBn28hs%3d&risl=&pid=ImgRaw&r=0" alt="Coffee Banner">
 	</div>
 
 	<div class="menu">
 		<div class="menu-item">
 			<div class="menu-image">
-				<img src="https://thumbs.dreamstime.com/b/cup-espresso-small-hot-drink-vector-illustration-225183920.jpg" alt="Espresso">
+				<img src="" alt="Espresso">
 			</div>
 			<div class="menu-details">
 				<h3>Espresso</h3>
@@ -25,6 +25,41 @@
 				<button class="add-to-cart-btn" data-name="Espresso" data-price="2.50">Add to Cart</button>
 			</div>
 		</div>
+
+		<div class="menu-item">
+			<div class="menu-image">
+				<img src="" alt="Espresso">
+			</div>
+			<div class="menu-details">
+				<h3>Espresso</h3>
+				<p>A concentrated shot of coffee served in a small cup.</p>
+				<p>Price: $2.50</p>
+				<button class="add-to-cart-btn" data-name="Espresso" data-price="2.50">Add to Cart</button>
+			</div>
+		</div>
+		<div class="menu-item">
+			<div class="menu-image">
+				<img src="" alt="Espresso">
+			</div>
+			<div class="menu-details">
+				<h3>Espresso</h3>
+				<p>A concentrated shot of coffee served in a small cup.</p>
+				<p>Price: $2.50</p>
+				<button class="add-to-cart-btn" data-name="Espresso" data-price="2.50">Add to Cart</button>
+			</div>
+		</div>
+		<div class="menu-item">
+			<div class="menu-image">
+				<img src="" alt="Espresso">
+			</div>
+			<div class="menu-details">
+				<h3>Espresso</h3>
+				<p>A concentrated shot of coffee served in a small cup.</p>
+				<p>Price: $2.50</p>
+				<button class="add-to-cart-btn" data-name="Espresso" data-price="2.50">Add to Cart</button>
+			</div>
+		</div>
+		
 
 		<!-- Additional menu items can be added here -->
 
