--- a/kafet.html
+++ b/kafet.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="style.css">
-    <script src="scripts.js"></script>
-	<title>Mulliri 01</title>
-	
+	<title>Checkout Page</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1 onclick="divClicked1()"> Porosin tuaj mund ta merrni ne banak! :p</h1>
+	<h1>Checkout</h1>
+	<form id="checkout-form">
+		<label for="name">Name</label>
+		<input type="text" id="name" name="name" required>
+
+		<label for="email">Email</label>
+		<input type="email" id="email" name="email" required>
+
+		<label for="phone">Phone Number</label>
+		<input type="tel" id="phone" name="phone" required>
+
+		<label for="address">Address</label>
+		<textarea id="address" name="address" required></textarea>
+
+		<label for="payment-type">Payment Type</label>
+		<select id="payment-type" name="payment-type" onchange="showPaymentForm()">
+			<option value="cash">Cash</option>
+			<option value="card">Card</option>
+		</select>
+
+		<div id="card-form" style="display: none;">
+			<label for="card">Credit Card Number</label>
+			<input type="text" id="card" name="card" required>
+
+			<label for="expiry">Expiration Date</label>
+			<input type="text" id="expiry" name="expiry" required>
+
+			<label for="cvv">CVV</label>
+			<input type="text" id="cvv" name="cvv" required>
+		</div>
+
+		<input type="submit" value="Place Order">
+	</form>
+
+	<script src="script.js"></script>
 </body>
 </html>
